--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
 .aboutus .aboutus-hero {
   width: 100%;
   height: 300px;
-  background-image: url("/img/aboutus-img.jpg");
+  background-image: url("../img/aboutus-img.jpg");
   background-size: cover;
   background-position: 80%;
 }
@@ -87,17 +87,17 @@ body {
 }
 
 .carousel .carousel-img-one {
-  background-image: url("/img/mountain-climbing-2124113_1280.jpg");
+  background-image: url("../img/mountain-climbing-2124113_1280.jpg");
   background-position: 50% 80%;
 }
 
 .carousel .carousel-img-two {
-  background-image: url("/img/landscape-6692712_1280.jpg");
+  background-image: url("../img/landscape-6692712_1280.jpg");
   background-position: 50% 70%;
 }
 
 .carousel .carousel-img-three {
-  background-image: url("/img/rock-climbing-2264698_1280.jpg");
+  background-image: url("../img/rock-climbing-2264698_1280.jpg");
   background-position: 50% 50%;
 }
 
