--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,7 +61,7 @@ body {
 	.aboutus-hero {
 		width: 100%;
 		height: 300px;
-		background-image: url('/img/aboutus-img.jpg');
+		background-image: url('../img/aboutus-img.jpg');
 		background-size: cover;
 		background-position: 80%;
 	}
@@ -79,15 +79,15 @@ body {
 
 .carousel {
 	.carousel-img-one {
-		background-image: url('/img/mountain-climbing-2124113_1280.jpg');
+		background-image: url('../img/mountain-climbing-2124113_1280.jpg');
 		background-position: 50% 80%;
 	}
 	.carousel-img-two {
-		background-image: url('/img/landscape-6692712_1280.jpg');
+		background-image: url('../img/landscape-6692712_1280.jpg');
 		background-position: 50% 70%;
 	}
 	.carousel-img-three {
-		background-image: url('/img/rock-climbing-2264698_1280.jpg');
+		background-image: url('../img/rock-climbing-2264698_1280.jpg');
 		background-position: 50% 50%;
 	}
 	.carousel-item {
